package org.intecbrussel.model;

public enum Role {
    USER,
    ADMIN
}
